apps/documentation/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quartz-docs
  namespace: documentation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quartz-docs
  template:
    metadata:
      labels:
        app: quartz-docs
    spec:
      volumes:
        - name: shared-data
          emptyDir: {}

      containers:
        - name: quartz
          image: harbor.lab.mpopov.net/library/documentation:quartz-builder
          volumeMounts:
          - name: shared-data
            mountPath: /quartz/public

        - name: nginx
          image: nginx
          ports: 
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
          volumeMounts:
          - name: shared-data
            mountPath: /usr/share/nginx/html
---
apiVersion: v1
kind: Service
metadata:
  name: quartz-docs
  namespace: documentation
spec:
  selector:
    app: quartz-docs
  ports:
    - name: http
      port: 80
      targetPort: 80
