apps/documentation/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: docu-httproute
  namespace: documentation
spec:
  hostnames:
    - docu.lab.mpopov.net
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: eg
      namespace: networking
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: quartz-docs
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
